# lizenz

./: CHANGELOG.md  Cargo.toml  changelog.toml  flake.nix  lizenz.toml  rust-toolchain.toml  rustfmt.toml  test.rs
.changelogs/: template.md
.changelogs/0.1.0/: 2025-07-19T09_46_04_534360523.md
src/: main.rs
