# © Marcel Müller 2025, licensed under the EUPL

[package]
name = "lizenz"
version = "0.1.0"
edition = "2024"
description = "A license checker for your source code"
repository = "https://github.com/TheNeikos/lizenz"
license = "EUPL-1.2"

[dependencies]
camino = "1.1.10"
clap = { version = "4.5.41", features = ["derive", "env"] }
glob-match = "0.2.1"
libloading = "0.8.8"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter = "0.25.8"
tree-sitter-language = "0.1.5"
